k8s/overlays/dev/ingress-host-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: secure-supply-chain-inventory
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - inventory.dev.example.com
      secretName: inventory-tls
  rules:
    - host: inventory.dev.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: secure-supply-chain-inventory
                port:
                  name: http
